started to make add index work
it is not yet working.
I still have to make IndexMemDic compatible with the Index Class
